--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
                 treatment: "Tratamento de suporte: repouso, hidratação oral ou intravenosa, analgésicos (paracetamol). Evitar anti-inflamatórios não esteroides. Monitoramento de sinais de alarme e casos graves.",
                 observations: "A dengue grave (anteriormente conhecida como dengue hemorrágica) pode levar a choque circulatório, sangramento grave e falência de órgãos. Requer hospitalização imediata."
             },
-            "malaria": {
+            "malária": {
                 definition: "Doença infecciosa causada por protozoários do gênero Plasmodium, transmitidos pela picada do mosquito Anopheles feminino.",
                 symptoms: "Ciclos de febre alta alternados com calafrios e sudorese intensa, dor de cabeça, náuseas, vômitos, dor muscular e abdominal, anemia, icterícia.",
                 diagnosis: "Gota espessa e esfregaço sanguíneo para visualização do parasita, testes rápidos de diagnóstico (RDTs), PCR em casos específicos.",
